--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,69 @@
+amqp==5.2.0
 asgiref==3.8.1
+billiard==4.2.0
+Brotli==1.1.0
+celery==5.4.0
+certifi==2024.7.4
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 crispy-bootstrap5==2024.2
+cron-descriptor==1.4.3
+cssselect2==0.7.0
 deprecation==2.1.0
 Django==5.0.6
+django-celery==3.1.17
+django-celery-beat==2.6.0
+django-celery-results==2.5.1
 django-crispy-forms==2.2
 django-email-verification==0.3.3
 django-environ==0.11.2
+django-google-fonts==0.0.3
+django-htmx==1.18.0
 django-mathfilters==1.0.0
+django-timezone-field==7.0
 environ==1.0
+Faker==26.1.0
+flower==2.0.1
+fonttools==4.53.1
+html5lib==1.1
+humanize==4.10.0
+idna==3.7
 iniconfig==2.0.0
+kombu==5.3.7
 packaging==24.1
 pillow==10.3.0
 pluggy==1.5.0
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+pycparser==2.22
+pydyf==0.11.0
 PyJWT==2.8.0
+pyphen==0.16.0
 pytest==8.2.2
+pytest-mock==3.14.0
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+redis==5.0.8
+reportlab==4.2.2
+requests==2.32.3
+six==1.16.0
+sorl-thumbnail==12.10.0
 sqlparse==0.5.0
+stripe==10.5.0
+tinycss2==1.3.0
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
 validators==0.28.3
+vine==5.1.0
+wcwidth==0.2.13
+weasyprint==62.3
+webencodings==0.5.1
+zopfli==0.2.3
